# mcp_hackathon

./: README.md  agent.ipynb  code_client.py  gradio_mcp.py  igdb_api.ipynb  pyproject.toml
.gradio/flagged/: dataset1.csv
.ipynb_checkpoints/: agent-checkpoint.ipynb
