[project]
name = "mcp-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio[mcp]>=5.30.0",
    "igdb-api-v4>=0.3.3",
    "mcp[cli]>=1.9.2",
    "requests>=2.32.3",
    "smolagents[mcp,openai,toolkit]>=1.17.0",
]
